pallets/phala/src/snapshots/phala_pallets__test__vault_force_withdraw_after_3x_grace_period.snap
---
source: pallets/phala/src/test.rs
expression: take_events()
---
[
    RuntimeEvent::Uniques(
        Event::Issued {
            collection: 10000,
            item: 1,
            owner: 7813586407040180578,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NftMinted {
            owner: AccountId(
                7813586407040180578,
            ),
            collection_id: 10000,
            nft_id: 1,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                1,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    128,
                    244,
                    32,
                    230,
                    181,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                1,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    49,
                    56,
                    49,
                    52,
                    52,
                    48,
                    49,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::NftCreated {
            pid: 0,
            cid: 10000,
            nft_id: 1,
            owner: 7813586407040180578,
            shares: 200000000000000,
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::WithdrawalQueued {
            pid: 0,
            user: 13009150994509951074,
            shares: 200000000000000,
            nft_id: 0,
            as_vault: Some(
                1,
            ),
            withdrawing_nft_id: 1,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                0,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::PhalaVault(
        Event::ForceShutdown {
            pid: 1,
            reason: Waiting3xGracePeriod,
        },
    ),
]
