pallets/phala/src/snapshots/phala_pallets__test__vault_force_withdraw_with_dust_investment.snap
---
source: pallets/phala/src/test.rs
expression: take_events()
---
[
    RuntimeEvent::PhalaVault(
        Event::ForceShutdown {
            pid: 1,
            reason: Waiting3xGracePeriod,
        },
    ),
]
