pallets/phala/src/snapshots/phala_pallets__test__withdraw2.snap
---
source: pallets/phala/src/test.rs
expression: take_events()
---
[
    RuntimeEvent::Uniques(
        Event::Issued {
            collection: 10000,
            item: 4,
            owner: 99,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NftMinted {
            owner: AccountId(
                99,
            ),
            collection_id: 10000,
            nft_id: 4,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                4,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    192,
                    110,
                    49,
                    217,
                    16,
                    1,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                4,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    48,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::NftCreated {
            pid: 0,
            cid: 10000,
            nft_id: 4,
            owner: 99,
            shares: 300000000000000,
        },
    ),
    RuntimeEvent::System(
        Event::NewAccount {
            account: 16637257129592320098,
        },
    ),
    RuntimeEvent::Assets(
        Event::Transferred {
            asset_id: 1,
            from: 99,
            to: 16637257129592320098,
            amount: 300000000000000,
        },
    ),
    RuntimeEvent::Assets(
        Event::Transferred {
            asset_id: 1,
            from: 16637257129592320098,
            to: 2,
            amount: 100000000000000,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                3,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertiesRemoved {
            collection_id: 10000,
            maybe_nft_id: Some(
                3,
            ),
        },
    ),
    RuntimeEvent::Uniques(
        Event::Burned {
            collection: 10000,
            item: 3,
            owner: 7813586407040180578,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NFTBurned {
            owner: 7813586407040180578,
            collection_id: 10000,
            nft_id: 3,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertyRemoved {
            collection_id: 10000,
            maybe_nft_id: Some(
                3,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::Withdrawal {
            pid: 0,
            user: 2,
            amount: 100000000000000,
            shares: 100000000000000,
            burnt_shares: 0,
        },
    ),
    RuntimeEvent::PhalaStakePoolv2(
        Event::Contribution {
            pid: 0,
            user: 99,
            amount: 300000000000000,
            shares: 300000000000000,
            as_vault: None,
        },
    ),
]
