pallets/phala/src/snapshots/phala_pallets__test__withdraw5.snap
---
source: pallets/phala/src/test.rs
expression: take_events()
---
[
    RuntimeEvent::Uniques(
        Event::Issued {
            collection: 10000,
            item: 7,
            owner: 7813586407040180578,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NftMinted {
            owner: AccountId(
                7813586407040180578,
            ),
            collection_id: 10000,
            nft_id: 7,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                7,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    128,
                    244,
                    32,
                    230,
                    181,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                7,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    48,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::NftCreated {
            pid: 0,
            cid: 10000,
            nft_id: 7,
            owner: 7813586407040180578,
            shares: 200000000000000,
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::WithdrawalQueued {
            pid: 0,
            user: 3,
            shares: 200000000000000,
            nft_id: 2,
            as_vault: None,
            withdrawing_nft_id: 7,
        },
    ),
    RuntimeEvent::Assets(
        Event::Transferred {
            asset_id: 1,
            from: 16637257129592320098,
            to: 3,
            amount: 200000000000000,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                7,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertiesRemoved {
            collection_id: 10000,
            maybe_nft_id: Some(
                7,
            ),
        },
    ),
    RuntimeEvent::Uniques(
        Event::Burned {
            collection: 10000,
            item: 7,
            owner: 7813586407040180578,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::NFTBurned {
            owner: 7813586407040180578,
            collection_id: 10000,
            nft_id: 7,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertyRemoved {
            collection_id: 10000,
            maybe_nft_id: Some(
                7,
            ),
            key: BoundedVec(
                [
                    99,
                    114,
                    101,
                    97,
                    116,
                    101,
                    116,
                    105,
                    109,
                    101,
                ],
                32000,
            ),
        },
    ),
    RuntimeEvent::PhalaBasePool(
        Event::Withdrawal {
            pid: 0,
            user: 3,
            amount: 200000000000000,
            shares: 200000000000000,
            burnt_shares: 0,
        },
    ),
    RuntimeEvent::RmrkCore(
        Event::PropertySet {
            collection_id: 10000,
            maybe_nft_id: Some(
                2,
            ),
            key: BoundedVec(
                [
                    115,
                    116,
                    97,
                    107,
                    101,
                    45,
                    105,
                    110,
                    102,
                    111,
                ],
                32000,
            ),
            value: BoundedVec(
                [
                    0,
                    64,
                    122,
                    16,
                    243,
                    90,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                512000,
            ),
        },
    ),
]
